fix horizontal scroll

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -14,6 +14,16 @@
 }
 
 
+footer p {
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  word-break: break-word;
+  max-width: 100%;
+}
+html, body {
+  overflow-x: hidden;
+}
+
 
 body{
     font-family:IranSans;
